# Processing-network-traffic

./: README.md  run.sh
Program1/: CMakeLists.txt  main.cpp
Program1/src/FlowInfo/: FlowInfo.h
Program1/src/Packet/: Packet.cpp  Packet.h
Program1/src/PacketAnalyzer/: PacketAnalyzer.cpp  PacketAnalyzer.h
Program1/src/PacketHandler/: PacketHandler.cpp  PacketHandler.h
Program2/: main.py
